# solana-inspect

./: Cargo.toml  README.md  dex_count.sh  dex_parse.sh  idl_parse.sh  rpc_check.sh  rustfmt.toml  swap_watch.sh
idl/: pump_amm.json  pump_program.json  raydium_clmm.json  raydium_cpmm.json
src/: client.rs  dex_filter.rs  lib.rs  main.rs
src/api_cache/: mod.rs  raydium_amm_api.rs
src/fetcher/: cache.rs  jupyter_api.rs  mod.rs  token.rs
src/protocols/raydium/: amm.rs  clmm.rs  cpmm.rs
