[package]
name = "solana-inspect"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
futures-util = "0.3"
sha2 = "0.10"
bs58 = "0.5"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
dashmap = "6.1.0"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }


[[bin]]
name = "rpc_check"
path = "src/bin/rpc_check.rs"

[[bin]]
name = "dex_count"
path = "src/bin/dex_count.rs"

[[bin]]
name = "idl_parse"
path = "src/bin/idl_parse.rs"

[[bin]]
name = "swap_watch"
path = "src/bin/swap_watch.rs"

